--- a/source/public/404.html
+++ b/source/public/404.html
@@ -13,10 +13,10 @@
     
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="I don&#39;t know what I&#39;m doing"/>
+<meta name="twitter:description" content="Just a super sharp-shooter. Shooting super super sharp shots"/>
 
     <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="I don&#39;t know what I&#39;m doing" />
+<meta property="og:description" content="Just a super sharp-shooter. Shooting super super sharp shots" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://christytc10.github.io/404.html" />
 
@@ -27,7 +27,10 @@
     <header class="app-header">
       <a href="https://christytc10.github.io/"><img class="app-header-avatar" src="https://avatars.githubusercontent.com/u/6845036?s=460&amp;u=553e7df722c52b26858ea003e1ae3a13c6b84a47&amp;v=4" alt="Christy Campbell" /></a>
       <h1>Christy Codes</h1>
-      <p>I don&#39;t know what I&#39;m doing</p>
+      <nav class="app-header-menu">
+          <a class="app-header-menu-item" href="/">Home</a>
+      </nav>
+      <p>Just a super sharp-shooter. Shooting super super sharp shots</p>
       <div class="app-header-social">
         
           <a href="https://github.com/christytc10" target="_blank" rel="noreferrer noopener">
