--- a/source/public/404.html
+++ b/source/public/404.html
@@ -13,10 +13,10 @@
     
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Just a super sharp-shooter. Shooting super super sharp shots"/>
+<meta name="twitter:description" content="website.start()"/>
 
     <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Just a super sharp-shooter. Shooting super super sharp shots" />
+<meta property="og:description" content="website.start()" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://christytc10.github.io/404.html" />
 
@@ -30,7 +30,7 @@
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">Home</a>
       </nav>
-      <p>Just a super sharp-shooter. Shooting super super sharp shots</p>
+      <p>website.start()</p>
       <div class="app-header-social">
         
           <a href="https://github.com/christytc10" target="_blank" rel="noreferrer noopener">
