--- a/source/public/404.html
+++ b/source/public/404.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Christy Campbell" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="https://christytc10.github.io/css/main.min.4a7ec8660f9a44b08c4da97c5f2e31b1192df1d4d0322e65c0dbbc6ecb1b863f.css" />
+    <link rel="stylesheet" href="https://christy.scot/css/main.min.4a7ec8660f9a44b08c4da97c5f2e31b1192df1d4d0322e65c0dbbc6ecb1b863f.css" />
 
     
     <meta name="twitter:card" content="summary"/>
@@ -18,14 +18,14 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="website.start()" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://christytc10.github.io/404.html" />
+<meta property="og:url" content="https://christy.scot/404.html" />
 
 
 
   </head>
   <body>
     <header class="app-header">
-      <a href="https://christytc10.github.io/"><img class="app-header-avatar" src="https://avatars.githubusercontent.com/u/6845036?s=460&amp;u=553e7df722c52b26858ea003e1ae3a13c6b84a47&amp;v=4" alt="Christy Campbell" /></a>
+      <a href="https://christy.scot/"><img class="app-header-avatar" src="https://avatars.githubusercontent.com/u/6845036?s=460&amp;u=553e7df722c52b26858ea003e1ae3a13c6b84a47&amp;v=4" alt="Christy Campbell" /></a>
       <h1>Christy Codes</h1>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">Home</a>
